fix(android): stabilize on 1.0.14 base → v1.0.17