@@ -25,6 +25,7 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -44,9 +45,9 @@ public class Subscriptions {
 
     private String apiEndpoint = "";
     private String jwt = "";
-    private String productId = "";
 
     public Subscriptions(SubscriptionsPlugin plugin, BillingClient billingClient) {
+        Logger.info("Subscriptions:init start");
         this.billingClient = billingClient;
         this.billingClient.startConnection(
                 new BillingClientStateListener() {
@@ -54,8 +55,10 @@ public class Subscriptions {
                     public void onBillingSetupFinished(@NonNull BillingResult billingResult) {
                         if (billingResult.getResponseCode() == BillingClient.BillingResponseCode.OK) {
                             billingClientIsConnected = 1;
+                            Logger.info("Subscriptions:Billing setup finished OK");
                         } else {
                             billingClientIsConnected = billingResult.getResponseCode();
+                            Logger.error("Subscriptions:Billing setup failed code=" + billingResult.getResponseCode() + " msg=" + billingResult.getDebugMessage());
                         }
                     }
 
@@ -63,11 +66,13 @@ public class Subscriptions {
                     public void onBillingServiceDisconnected() {
                         // Try to restart the connection on the next request to
                         // Google Play by calling the startConnection() method.
+                        Logger.warn("Subscriptions:Billing service disconnected");
                     }
                 }
             );
         this.activity = plugin.getActivity();
         this.context = plugin.getContext();
+        Logger.info("Subscriptions:init done");
     }
 
     public String echo(String value) {
@@ -78,7 +83,6 @@ public class Subscriptions {
     public void setApiVerificationDetails(String apiEndpoint, String jwt, String productId) {
         this.apiEndpoint = apiEndpoint;
         this.jwt = jwt;
-        this.productId = productId;
 
         Log.i("SET-VERIFY", "Verification values updated");
     }
@@ -96,8 +100,9 @@ public class Subscriptions {
                 .setProductList(List.of(productToFind))
                 .build();
 
-            billingClient.queryProductDetailsAsync(queryProductDetailsParams, (billingResult, productDetailsList) -> {
+            billingClient.queryProductDetailsAsync(queryProductDetailsParams, (billingResult, productDetailsResult) -> {
                 try {
+                    List<ProductDetails> productDetailsList = productDetailsResult.getProductDetailsList();
                     ProductDetails productDetails = productDetailsList.get(0);
                     String productId = productDetails.getProductId();
                     String title = productDetails.getTitle();
@@ -258,8 +263,9 @@ public class Subscriptions {
                 .setProductList(List.of(productToFind))
                 .build();
 
-            billingClient.queryProductDetailsAsync(queryProductDetailsParams, (billingResult1, productDetailsList) -> {
+            billingClient.queryProductDetailsAsync(queryProductDetailsParams, (billingResult1, productDetailsResult) -> {
                 try {
+                    List<ProductDetails> productDetailsList = productDetailsResult.getProductDetailsList();
                     ProductDetails productDetails = productDetailsList.get(0);
                     BillingFlowParams.Builder builder = BillingFlowParams.newBuilder()
                         .setProductDetailsParamsList(
@@ -295,7 +301,8 @@ public class Subscriptions {
     private String getExpiryDateFromApi(String transactionId) {
         try {
             // Compile request to verify purchase token
-            URL obj = new URL(this.apiEndpoint);
+            URI uri = new URI(this.apiEndpoint);
+            URL obj = uri.toURL();
             HttpURLConnection con = (HttpURLConnection) obj.openConnection();
             con.setRequestMethod("POST");
             con.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
